# booz_xform

./: .buildinfo  .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  api.html  booz_xform_demo.ipynb  developer.html  genindex.html  getting_started.html  index.html  objects.inv  plotting.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  source.html  theory.html  usage.html
.github/workflows/: ci.yml  docs.yml  pypi.yml
_sources/: api.rst.txt  developer.rst.txt  index.rst.txt  plotting.rst.txt  source.rst.txt  theory.rst.txt
cmake/: FindNetCDF.cmake  knownHosts.cmake
docs/: Doxyfile  README.md
docs/source/: api.rst  conf.py  developer.rst  getting_started.rst  index.rst  plotting.rst  source.rst  theory.rst  usage.rst
examples/: booz_xform_demo.ipynb  plots_demo.ipynb
externalPackages/: installDoctest.sh
src/: bindings.cpp  booz_xform.cpp  booz_xform.hpp  check_accuracy.cpp  driver.cpp  init.cpp  init_from_vmec.cpp  init_trig.cpp  init_trig.hpp  netcdf_reader.cpp  netcdf_reader.hpp  netcdf_writer.cpp  netcdf_writer.hpp  read_netcdf.cpp  run.cpp  surface_solve.cpp  vector_matrix.cpp  vector_matrix.hpp  write_boozmn.cpp
src/_booz_xform/: bindings.cpp  booz_xform.cpp  booz_xform.hpp  check_accuracy.cpp  driver.cpp  init.cpp  init_from_vmec.cpp  netcdf_reader.cpp  netcdf_reader.hpp  netcdf_writer.cpp  read_boozmn.cpp  read_netcdf.cpp  read_wout.cpp  run.cpp  surface_solve.cpp  vector_matrix.hpp  write_boozmn.cpp  xbooz_xform.cpp
src/booz_xform/: __init__.py  booz_xform_python.py  plots.py
tests/: driver_tests.cpp  init_trig_tests.cpp  show_modeplot.py  show_surfplot.py  show_symplot.py  show_wireplot.py  test  test_plots.py  test_python.py  test_regression.py  test_write_read.py
tests/test_files/: booz_in.LandremanSenguptaPlunk_section5p3  booz_in.circular_tokamak  booz_in.li383_1.4m  booz_in.up_down_asymmetric_tokamak  boozmn_LandremanSenguptaPlunk_section5p3.nc  boozmn_li383_1.4m.nc  boozmn_li383_1.4m_manySurfs.nc  boozmn_up_down_asymmetric_tokamak.nc  wout_LandremanSenguptaPlunk_section5p3.nc  wout_up_down_asymmetric_tokamak.nc
